# aws-cognito-auth

./: README.rst  pyproject.toml
docs/: .buildinfo  aws_cognito_auth.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: aws_cognito_auth.doctree  environment.pickle  index.doctree
docs/_sources/: aws_cognito_auth.rst.txt  index.rst.txt
sphinx/source/: conf.py
src/aws_cognito_auth/: __init__.py  auth.py  cli.py
tests/: test_aws_cognito_auth.py
